--- a/subsonic-installer-debian/pom.xml
+++ b/subsonic-installer-debian/pom.xml
@@ -10,17 +10,17 @@
     <parent>
         <groupId>net.sourceforge.subsonic</groupId>
         <artifactId>subsonic</artifactId>
-        <version>5.0</version>
+        <version>5.0.beta1</version>
     </parent>
 
     <profiles>
 
         <profile>
-            <id>linux</id>
+            <id>debian</id>
             <activation>
-                <os>
-                    <family>debian</family>
-                </os>
+                <property>
+                    <name>debian</name>
+                </property>
             </activation>
 
             <build>
