--- a/subsonic-installer-debian/src/DEBIAN/control
+++ b/subsonic-installer-debian/src/DEBIAN/control
@@ -2,7 +2,7 @@ Package: subsonic
 Version: @VERSION@
 Section: Multimedia
 Priority: optional
-Recommends: ffmpeg
+Recommends: lame, ffmpeg
 Architecture: all
 Maintainer: Sindre Mehus <sindre@activeobjects.no>
 Description: A web-based music streamer, jukebox and Podcast receiver
