--- a/subsonic-main/pom.xml
+++ b/subsonic-main/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>net.sourceforge.subsonic</groupId>
         <artifactId>subsonic</artifactId>
-        <version>5.0</version>
+        <version>5.0.beta1</version>
     </parent>
 
     <dependencies>
@@ -296,7 +296,7 @@
         <dependency>
             <groupId>net.tanesha.recaptcha4j</groupId>
             <artifactId>recaptcha4j</artifactId>
-            <version>0.0.8</version>
+            <version>0.0.7</version>
         </dependency>
 
     </dependencies>
@@ -330,7 +330,6 @@
     <build>
         <finalName>subsonic</finalName>
         <plugins>
-
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <executions>
@@ -352,7 +351,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
 </project>
